[package]
name = "moenarch-geo-clustering-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line adapter for the geo-clustering library crate."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "geo-clustering-cli"

[lib]
name = "geo_clustering_cli"

[[bin]]
name = "geo-clustering-cli"
path = "src/main.rs"

[dependencies]
runtime-core.workspace = true
clap.workspace = true
serde_json.workspace = true
geo-clustering = { package = "moenarch-geo-clustering", version = "0.1.0", path = "../moenarch-geo-clustering" }