[package]
name = "moenarch-geo-clustering-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for geo-clustering."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "geo_clustering_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
runtime-core.workspace = true
js-sys = "0.3.82"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"
geo-clustering.workspace = true
