[package]
name = "moenarch-geo-core-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line adapter for the geo-core library crate."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
default-run = "geo-core-cli"

[lib]
name = "geo_core_cli"

[[bin]]
name = "geo-core-cli"
path = "src/main.rs"

[dependencies]
runtime-core.workspace = true
clap.workspace = true
serde_json.workspace = true
geo-core.workspace = true
