[package]
name = "moenarch-geo-core-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP API adapter for the geo-core library crate."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false
default-run = "geo-core-server"

[lib]
name = "geo_core_server"

[[bin]]
name = "geo-core-server"
path = "src/main.rs"

[dependencies]
runtime-core.workspace = true
clap.workspace = true
serde_json.workspace = true
geo-core.workspace = true
