[package]
name = "moenarch-geo-core-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for geo-core."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "geo_core_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
runtime-core.workspace = true
geo-core.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
