[package]
name = "moenarch-geo-io-osm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP API adapter for the geo-io-osm library crate."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moenarch-geo-io-osm"
publish = false

[lib]
name = "geo_io_osm_server"

[[bin]]
name = "geo-io-osm-server"
path = "src/main.rs"

[dependencies]
clap.workspace = true
geo-io-osm.workspace = true
runtime-core.workspace = true
serde_json.workspace = true
