[package]
name = "moenarch-geo-io-osm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings for geo-io-osm."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moenarch-geo-io-osm"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "geo_io_osm_wasm"

[dependencies]
geo-io-osm.workspace = true
js-sys.workspace = true
runtime-core.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
