[package]
name = "moenarch-geo-viz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line adapter for the geo-viz library crate."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "geo-viz-cli"

[lib]
name = "geo_viz_cli"

[[bin]]
name = "geo-viz-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
runtime-core.workspace = true
serde_json.workspace = true
geo-viz = { package = "moenarch-geo-viz", version = "0.1.0", path = "../moenarch-geo-viz" }