[package]
name = "moenarch-geo-viz-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HTTP API adapter for the geo-viz library crate."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "geo-viz-server"

[lib]
name = "geo_viz_server"

[[bin]]
name = "geo-viz-server"
path = "src/main.rs"

[dependencies]
clap.workspace = true
runtime-core.workspace = true
serde_json.workspace = true
geo-viz = { package = "moenarch-geo-viz", version = "0.1.0", path = "../moenarch-geo-viz" }