[package]
name = "moenarch-geo-clustering"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Format-agnostic geospatial point clustering over geo-core domain types."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/moenarch-geo-clustering"
keywords = ["geo", "geospatial", "clustering", "maps"]
categories = ["science::geo", "algorithms", "data-structures"]

[lib]
name = "geo_clustering"

[dependencies]
runtime-core.workspace = true
geo-core.workspace = true
serde.workspace = true
serde_json.workspace = true
