[package]
name = "moenarch-geo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Format-agnostic geospatial domain types, geometry helpers, and transforms."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "geo_core"

[dependencies]
runtime-core.workspace = true
serde.workspace = true
serde_json.workspace = true
