[package]
name = "moenarch-maps-kernels-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Numeric kernels for map and temporal GeoJSON processing."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "maps_kernels_core"

[dependencies]
runtime-core.workspace = true
serde.workspace = true
serde_json.workspace = true
